Changelog
=========

0.8 (unreleased)
----------------

- Added support for Nemo and Caja (forks of Nautilus for Linux Mint).
- misc/open_in_terminal now uses "x-terminal-emulator" instead of "gnome-terminal".


0.7 (2012-05-24)
----------------

- Now all scripts capture and display exceptions to the user.


0.6 (2011-12-27)
----------------

- Added local copy of PyZenity.py because it's gone missing from it's original URL.


0.5 (2011-06-26)
----------------

- Added ``rename/mp3`` script.


0.4 (2011-04-27)
----------------

- Added ``text/rst2html`` script.


0.3 (2011-03-13)
----------------

- Now the ``rbco_nautilusscirpts_install`` script correctly locates the installed scripts, instead
  of just assuming they were on ``/usr/bin``.


0.2 (2011-01-31)
----------------

- Added new renaming script: ``remove_accentuation``.
- Now depends on ``rbco.rename`` version ``>=0.3``. Previously was ``>=0.2``.


0.1 (2010-08-31)
----------------

- Initial release
