@@ -6,6 +6,8 @@ Changelog
 
 - Added support for Nemo and Caja (forks of Nautilus for Linux Mint).
 - misc/open_in_terminal now uses "x-terminal-emulator" instead of "gnome-terminal".
+- Corrected install script name.
+- Allow to pass source directory to install script.
 
 
 0.7 (2012-05-24)
